Closed Bug 1145702 Opened 10 years ago Closed 10 years ago

MOZ_ASSERT((result.value * mFirstOverscrollAnimationSample.value) >= 0.0f) is still firing

Categories

(Core :: Panning and Zooming, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: botond, Assigned: botond)

References

Details

(Whiteboard: [gfx-noted])

Attachments

(1 file, 1 obsolete file)

I fixed the problem I thought was causing this assertion to fire in bug 1131749, but it looks like it's still firing (see bug 1131749 comment 16).
Attached file MozReview Request: bz://1145702/botond (obsolete) —
/r/5795 - Bug 1145702 - Make the assertion in Axis::GetOverscroll() more informative. r=Cwiiis

Pull down this commit:

hg pull review -r 6f7ec14934ec9c479ed1543abcba9b525acc2be3
Comment on attachment 8580788 [details]
MozReview Request: bz://1145702/botond

Carrying r=Cwiiis from bug 1131749 comment 21.
Attachment #8580788 - Flags: review+
Try push: https://treeherder.mozilla.org/#/jobs?repo=try&revision=b0d528257356
(In reply to Botond Ballo [:botond] from comment #3)
> Try push:
> https://treeherder.mozilla.org/#/jobs?repo=try&revision=b0d528257356

Canceled this one and included this a combined try push with another patch to save some resources:

https://treeherder.mozilla.org/#/jobs?repo=try&revision=a45913b4e313
Whiteboard: [gfx-noted]
And the assertion just fired for me while using the Browser app:

###!!! ASSERTION: GetOverscroll() (252.442856) and first overscroll animation sample (-691.253479) have different signs

Not rounding error!
Keywords: checkin-needed
(In reply to Botond Ballo [:botond] from comment #5)
> And the assertion just fired for me while using the Browser app:
> 
> ###!!! ASSERTION: GetOverscroll() (252.442856) and first overscroll
> animation sample (-691.253479) have different signs
> 
> Not rounding error!

Unfortunately, I wasn't able to reproduce this again. I did look over the code again, and I can't see why we would be getting values like this :/

In any case, landed the diagnostic patch, it can't hurt:

https://hg.mozilla.org/integration/mozilla-inbound/rev/962d3b65774a
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/962d3b65774a
Assignee: nobody → botond
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Attachment #8580788 - Attachment is obsolete: true
Attachment #8619830 - Flags: review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: