Bug 1145702 - Make the assertion in Axis::GetOverscroll() more informative. r=Cwiiis